[package]
name = "rewards-program"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_program"
path = "src/lib.rs"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }
percolator-prog = { workspace = true }
governance-adapter = { path = "../governance", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = { workspace = true }
litesvm = { workspace = true }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
