[package]
name = "rewards-program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_program"
path = "src/lib.rs"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }
governance-adapter = { path = "../governance", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = { workspace = true }
solana-program-runtime = "1.18"
litesvm = { workspace = true }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
percolator-prog = { workspace = true }
